--- a/event_20240805.md
+++ b/event_20240805.md
@@ -1,4 +1,4 @@
-![chillSAP LT＆もくもく会 #5](path/to/your/image.jpg)
+![chillSAP LT＆もくもく会 #5](event20240805.jpg)
 
 8/5 に久々のもくもく会を開催したいと思います。  
 それぞれの夏の自由研究に向けて弾みをつけるために、みんなで集まりませんか？
