--- a/event_20240805.md
+++ b/event_20240805.md
@@ -1,9 +1,11 @@
+# chillSAP LT＆もくもく会 #5
 ![chillSAP LT＆もくもく会 #5](event20240805.jpg)
 
-8/5 に久々のもくもく会を開催したいと思います。  
+8/5に久々のもくもく会を開催したいと思います。  
 それぞれの夏の自由研究に向けて弾みをつけるために、みんなで集まりませんか？
 
-今回は、終了後にLTの時間もご用意しています。（発表したい方も募集中です）
+今回は、終了後にLTの時間もご用意しています。
+（発表したい方も募集中ですので、Googleフォームより 7/20 までに立候補お願いします）
 
 **ぜひご参加ください～！**
 
@@ -11,10 +13,12 @@
 
 ## イベント詳細
 
-- **日時**: 2024年8月5日　
+- **日時**: 2024年8月5日（月）
 - **内容**: 
   1. もくもく会
   2. LTセッション
+ 
+- **場所**: X-base原宿
 
 ## 参加方法
 
@@ -22,7 +26,6 @@
 
 ## 注意事項
 
-- 感染症対策にご協力ください
 - PCやタブレットなど、作業に必要な機器はご持参ください
 
 ## お問い合わせ
