--- a/event_20240805.md
+++ b/event_20240805.md
@@ -1,5 +1,5 @@
 # chillSAP LT＆もくもく会 #5
-![chillSAP LT＆もくもく会 #5](event20240805.jpg)
+![chillSAP LT＆もくもく会 #5](event20240805.jpg){:width="300px"}
 
 8/5に久々のもくもく会を開催したいと思います。  
 それぞれの夏の自由研究に向けて弾みをつけるために、みんなで集まりませんか？
