--- a/event_20240805.md
+++ b/event_20240805.md
@@ -1,13 +1,13 @@
-# chillSAP LT＆もくもく会 #5
-![chillSAP LT＆もくもく会 #5](event20240805.jpg){: .responsive-image}
+# chillSAP もくもく会 #5 ＋LTタイム 
+![chillSAP もくもく会 #5](event20240805.jpg){: .responsive-image}
 
 8/5に久々のもくもく会を開催したいと思います。  
-それぞれの夏の自由研究に向けて弾みをつけるために、みんなで集まりませんか？
+それぞれの夏の自由研究に向けて弾みをつけるため、みんなで集まりませんか？
 
-今回は、終了後にLTの時間もご用意しています。
-（発表したい方も募集中ですので、Googleフォームより 7/20 までに立候補お願いします）
+また今回は、終了後にLTの時間もご用意しています。
+発表したい方も募集中ですので、我こそはという方は下記の Googleフォームより 7/20 までに立候補お願いします。
 
-**ぜひご参加ください～！**
+**みなさま、ぜひお気軽にご参加ください～！**
 
 ---
 
@@ -26,7 +26,7 @@
 
 ## 注意事項
 
-- PCやタブレットなど、作業に必要な機器はご持参ください
+- PCや参考資料など、作業に必要な機器はご持参ください
 
 ## お問い合わせ
 
